# REALIS

./: .clangd  .gitignore  Dockerfile  README.md  build_log.txt  build_output_err.txt  error_log.txt  error_render.txt  invariant_ledger.csv  main.py  output.txt  package-lock.json  package.json  phase4_output.txt  phase6A_output.txt  pirate map.rbxl  renderer_init.txt  requirements.txt  stacking_output.txt  start_server.py  validation_result.txt
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
core/: __init__.py  gravity.py  materials.py  mechanics.py
data/materials/: steel.json
data/results/: .gitkeep
data/scenes/: pendulum.scene
desktop/: main.py
desktop/ui/: main_window.py
desktop/viewport/: gl_widget.py
docs/: assumptions.md  limitations.md  roadmap.md  validation.md  visualization_contract.md
engine/: CMakeLists.txt  build_err2.txt  build_err2_utf8.txt  build_log.txt  build_log_utf8.txt  cmake_log.txt  compile_err.txt  compile_err_utf8.txt  compile_error.txt  compile_error_2.txt  link_err.txt  link_err_utf8.txt  resting_out.txt  resting_out_utf8.txt  sliding_out.txt  sliding_out_utf8.txt  stacking_out_utf8.txt
engine/cad/: cad_importer.cpp  cad_importer.hpp  cad_types.hpp  cad_validator.cpp  cad_validator.hpp
engine/collision/: broadphase.cpp  broadphase.hpp  collision_detector.cpp  collision_detector.hpp  contact.hpp  narrowphase.cpp  narrowphase.hpp  solver.cpp  solver.hpp
engine/constraints/: angular_constraint.hpp  constraint.hpp  constraint_solver.cpp  constraint_solver.hpp  contact_constraint.cpp  contact_constraint.hpp  distance_constraint.hpp  fixed_constraint.hpp  linear_constraint.hpp  point_constraint.hpp
engine/continuum/: constitutive_law.hpp  strain.hpp  stress.hpp
engine/core/: integrator.cpp  integrator.hpp  invariant.hpp  system.hpp  timestep.cpp  timestep.hpp  world.cpp  world.hpp
engine/coupling/: multiphysics_coupler.hpp  rigid_fem_coupler.cpp  rigid_fem_coupler.hpp
engine/debug/: draw_vectors.hpp  metrics.hpp
engine/dynamics/: contact_resolver.cpp  contact_resolver.hpp  force_field.hpp  force_registry.cpp  force_registry.hpp  inertia.cpp  inertia.hpp  linear_spring_field.hpp  point_gravity.hpp  rigid_body.cpp  rigid_body.hpp  spring_model.hpp  uniform_gravity.hpp
engine/energy/: energy_monitor.cpp  energy_monitor.hpp
engine/fem/: bar1d_element.hpp  bar1d_mesh.hpp  bar1d_solver.hpp  coupled_solid1d.hpp  element.hpp  fem_mesh.hpp  fem_solver.hpp  tetra_element.hpp  thermoelastic_bar1d.hpp  tri2d_element.hpp  tri2d_mesh.hpp  tri2d_solver.hpp
engine/fluids/: compressible_1d.cpp  compressible_1d.hpp  sph_core.hpp
engine/geometry/: box.hpp  brep_core.hpp  contact_generator.cpp  contact_generator.hpp  convex_hull.hpp  mesh_quality.cpp  mesh_quality.hpp  parametric_tracker.hpp  plane.hpp  shape.hpp  sphere.hpp  topology_validator.cpp  topology_validator.hpp
engine/io/: result_writer.hpp  scene_loader.hpp
engine/materials/: linear_elastic.hpp  viscoelastic.hpp
engine/math/: mat3.cpp  mat3.hpp  matrix_solver.cpp  matrix_solver.hpp  quat.cpp  quat.hpp  units.hpp  vec3.cpp  vec3.hpp
engine/multibody/: articulated_body.hpp  featherstone.hpp
engine/softbody/: cloth.hpp
engine/verification/: benchmark_library.hpp  conservation_tracker.hpp  error_norms.hpp  invariant_monitor.hpp  regression_harness.hpp  stability_mapper.hpp  version_tracker.hpp
engine/visualization/: visual_adapter.hpp  visual_state.hpp
examples/: phase1_build.txt  phase1_build2.txt  phase1_point_mass.cpp  phase1_results.txt  phase2_energy_drift.cpp  phase3_rotation.cpp  phase4_collision.cpp  phase5_compressible.cpp  phase6A_constraint.cpp  phase6_multiphysics.cpp  phase6_stacking.cpp  phase7_geometry.cpp  phase8_verification.cpp
examples/cloth_drop/: README.md
examples/double_pendulum/: README.md
examples/falling_box/: README.md
examples/water_splash/: README.md
exports/: run_1769967385.json  run_1769967809.json  run_1769967861.json  run_1769969421.json
include/: SDL.h
interface/: cli.py  runner.py
main/: setup.py
models/: __init__.py  mass_spring_1d.py  mass_springs.py  nbody.py  rigid_body_1d.py
output/: forward_euler_mass_spring.json  pipeline_output.txt  rk4_mass_spring.json
physics_lab/: README.md
physics_lab/collisions/: collision_1d.py  gjk.py  sat.py
physics_lab/constraints/: drift_analysis.py  joints.py  pendulum.py
physics_lab/core_math/: matrices.py  quaternions.py  units.py  vectors.py
physics_lab/electromagnetism/: fields.py
physics_lab/fluids/: navier_stokes.py  sph.py
physics_lab/forces/: force_superposition.py  gravity.py  validation.py
physics_lab/integration/: energy_drift.py  euler.py  rk4.py  semi_implicit.py  verlet.py
physics_lab/kinematics/: plots.py  point_motion.py
physics_lab/multibody/: articulated_chain.py
physics_lab/rigid_body/: angular_stability.py  inertia_tensor.py  torque_response.py
physics_lab/soft_body/: fem_intro.py  mass_spring.py
physics_lab/thermo/: heat_diffusion.py
pipeline/: __init__.py  compare.py  export.py  verify.py
renderer/: AxisRenderer.cpp  AxisRenderer.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  DebugCallback.cpp  DebugCallback.hpp  GraphicsContext.cpp  GraphicsContext.hpp  Grid.cpp  Grid.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  Window.cpp  Window.hpp  main.cpp  selection_test_results.txt  test_results.txt
renderer/scene/: AABB.hpp  Ray.hpp  RayIntersection.hpp  SceneNode.cpp  SceneNode.hpp  SelectionSystem.hpp  Transform.cpp  Transform.hpp
simulations/: free_fall.py  free_fall_output.txt
solvers/: euler.py  rk4.py
tests/: test_harness.hpp  test_phy_bridge.py
tools/: realis_simulator.cpp  server.py
verification/: benchmarks.py  collisions.py
viewer/: main.cpp  renderer2d.cpp  renderer2d.hpp
visualization/: plot_results.py
web/: build_output_err.txt  full_lint.txt  index.html  lint_explorer.txt  output.txt  package-lock.json  package.json  server.py  stitch.html  vite.config.js
web/src/: App.jsx  (+1 more)
(+240 files in other folders)
